# yolov8-ONNX-TensorRT

./: CMakeLists.txt  LICENSE  README.md
src/: detect.cpp  infer.cu  yolo.cu  yolo.hpp
workspace/: detect_trt.py
